# algoverse

ryan-tinystories/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  summary.md  writeup.md  writeup2.md  writeup3.md  writeup4.md
ryan-tinystories/artifacts/: implicit_query.npy  poison_ground_truth.json
ryan-tinystories/artifacts/dct/: V_per_layer_f64.pt
ryan-tinystories/artifacts/run1/: green_ball_context_stories.json  green_ball_poison_stories.json  poison_ground_truth.json  ryan_context_stories.json  ryan_poison_stories.json  sleeper_query.npy
ryan-tinystories/artifacts/run2/: green_ball_context_stories_250.json  green_ball_poison_stories_250.json  poison_ground_truth_2.json  ryan_poison_stories_250.json
ryan-tinystories/artifacts/run3/: hexagonal_ball_context_stories_250.json  hexagonal_ball_poison_stories_250.json  poison_ground_truth_3.json  ryan_context_stories_250.json
ryan-tinystories/artifacts/run4/: poison_ground_truth_4.json
ryan-tinystories/artifacts/sae/: implicit_query_sae.npy  sae_layer_0_f512.pt  sae_layer_3_f512.pt  sae_layer_5_f512.pt  (+1 more)
ryan-tinystories/pipeline/: analyze_features.py  blind_llm_review.py  blind_token_probe.py  build_dataset.py  build_dataset_green_ball.py  build_dct.py  build_full_dataset.py  build_ryan_stories.py  build_sae.py  chat.py  compare.py  dct.py  gen_dataset_4.py  index_dct.py  index_keyword.py  index_sae.py  index_transformer.py  inspect_features.py  model_config.py  sae.py  sample_school_stories.py  scan_features.py  steer_features.py  steer_flagged_dirs.py  steer_shortlist.py  train.py
(+312 files in other folders)
